src/test/error/symbol.lns
let _val = 1; // error
fn _func1() { // error
}
fn func2( _val:int ) { // error
}
class _Test { // error
   fn _func() {  // error
   }
}
macro Hoge() {  // error
}
let self = 1; // errorr
let val = 1;

{
   fn func3() : int! {
      return 1;
   }
   fn sub3() {
      let! _ = func3() { // error
         return;
      };
      if! let _ = func3() { // error
      }
   }
}

macro _Test() {
   {
      let val2 = val; // error
   }
   print( ,,val2 );
}
